<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
>
        <group
        android:id="@+id/group">
                <item
                        android:id="@+id/settings_menu_item"
                        android:title="@string/settings"
                        android:contentDescription="@string/content_description_more"
                        app:showAsAction="never"/>
<!--                        android:onClick="onSettingsBtn"-->
                />
                <item
                        android:id="@+id/about_menu_item"
                        android:title="@string/about"
                        android:contentDescription="@string/content_description_more"
                        app:showAsAction="never"/>
<!--                        android:onClick="onAboutBtn"-->
                />

        </group>


</menu>