<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.main.ViewWorkoutFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    android:background="@color/Background_color">

        <TextView
                android:text="Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/workout_name"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:textSize="24sp"/>
        <View
                android:id="@+id/divider11"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/workout_name"
                android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView20"
                app:layout_constraintTop_toBottomOf="@+id/divider11" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" android:layout_marginStart="24dp" android:text="@string/type"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/moving_workout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/type_text"
                app:layout_constraintTop_toBottomOf="@+id/divider11" app:layout_constraintEnd_toEndOf="parent"
                android:textSize="18sp" android:layout_marginTop="8dp" android:layout_marginEnd="24dp"/>
        <View
                android:id="@+id/divider12"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/type_text" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
        <TextView
                android:text="@string/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView22"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/divider12"
                android:layout_marginTop="8dp" android:layout_marginStart="24dp"/>
        <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/steps_number"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/divider12"
                android:layout_marginEnd="24dp" android:layout_marginTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>