<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.main.SettingsFragment"
             android:id="@+id/settings_fragment"
             android:background="@color/Background_color">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/settings" android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:id="@+id/textView"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:id="@+id/linearLayout">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/distance"
                        android:layout_width="258dp"
                        android:layout_height="wrap_content" android:id="@+id/textView3"/>
                <Switch
                        android:text="km"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/switch_distance" android:layout_weight="1"
                />
            </LinearLayout>
            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:padding="4dp" android:layout_margin="4dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/weight"
                        android:layout_width="258dp"
                        android:layout_height="wrap_content" android:id="@+id/textView2"/>
                <Switch
                        android:text="kg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/switch_weight" android:layout_weight="1"
                        />
            </LinearLayout>
        </LinearLayout>
        <View
                android:id="@+id/divider2"
                android:layout_width="404dp"
                android:layout_height="3dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>