<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.main.WorkoutFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="Step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Step_Counter_workout"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" android:layout_marginStart="16dp" android:textSize="24sp"/>
        <View
                android:id="@+id/divider15"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/Step_Counter_workout"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
        <Button
                android:text="Next Step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/next_step"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="72dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Strenght_layout_do"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider15" android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/next_step">

            <TextView
                    android:text="@string/reps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView28"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="18sp"
                    android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView27"
                    android:textSize="18sp"
                    android:text="@string/weight"
                    app:layout_constraintTop_toBottomOf="@+id/textView28" android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
            <TextView
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Rep_textview_workout"
                    app:layout_constraintStart_toEndOf="@+id/textView28"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp" android:textSize="18sp"/>
            <TextView
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/weight_textview_do_workout"
                    app:layout_constraintStart_toEndOf="@+id/textView27"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.49" android:textSize="18sp"/>
            <TextView
                    android:text="kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/weight_unit_textview"
                    app:layout_constraintStart_toEndOf="@+id/weight_textview_do_workout"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.03"
                    app:layout_constraintTop_toBottomOf="@+id/Rep_textview_workout" android:layout_marginTop="25dp"
                    android:textSize="18sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="419dp"
                android:layout_height="183dp"
                android:id="@+id/Moving_layout_do"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/next_step"
                app:layout_constraintTop_toBottomOf="@+id/divider15"
                app:layout_constraintVertical_bias="0.53">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView25"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:textSize="18sp"
                    android:text="@string/minutes"/>
            <TextView
                    android:text="@string/seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView26"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView25" android:textSize="18sp"
                    android:layout_marginTop="34dp" android:layout_marginStart="16dp"/>
            <TextView
                    android:text="@string/distance_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView29"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView26"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:textSize="18sp"/>
            <TextView
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Minute_counter"
                    app:layout_constraintStart_toEndOf="@+id/textView25"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp" android:textSize="18sp"/>
            <TextView
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/Second_counter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView26"
                    app:layout_constraintTop_toBottomOf="@+id/Minute_counter" android:layout_marginTop="34dp"
                    android:textSize="18sp" app:layout_constraintHorizontal_bias="0.49"/>
            <TextView
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/distance_counter"
                    app:layout_constraintStart_toEndOf="@+id/textView29"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/Second_counter"
                    android:layout_marginTop="34dp" android:textSize="18sp"
                    app:layout_constraintHorizontal_bias="0.49"/>
            <TextView
                    android:text="km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/distance_unit_textView"
                    app:layout_constraintStart_toEndOf="@+id/distance_counter"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="27dp" app:layout_constraintHorizontal_bias="0.04"
                    android:textSize="18sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
                android:text="Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/description_textView"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/divider15"
                app:layout_constraintBottom_toTopOf="@+id/next_step" app:layout_constraintVertical_bias="0.13"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>